# ai-trading-bot

./: .replit  ai_signals.py  angel_api.py  app.py  config.py  main.py  paper_trading.py  pyproject.toml  requirements.txt  signal_logger.py  telegram_alerts.py
static/css/: style.css
templates/: dashboard.html  index.html  login.html
