[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "pandas>=2.3.1",
    "pyotp>=2.9.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.0",
    "ta>=0.11.0",
    "xgboost>=3.0.2",
]
